debugging, trying other urls for iframe links

--- a/index.html
+++ b/index.html
@@ -85,14 +85,16 @@
             <!-- Panel 1: Links to portfolio -->
             <a-box position="-1 0 0" color="green">
                 <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="raycastable"
-                    open-page-iframe="url:https://tezeroth.github.io/Bootstrap-Portfolio/">
+                    open-page-iframe="url:https://www.google.com">
+                   <!-- "url:https://tezeroth.github.io/Bootstrap-Portfolio/"-->
                 </a-plane>
             </a-box>
 
             <!-- Panel 2: Links to ecommerce platform -->
             <a-cylinder position="1 0 0"  color="green">
                 <a-plane mixin="panel hover-anim" material="src:#Shop;" class="raycastable"
-                    open-page-iframe="url:https://www.shopify.com/uk">
+                    open-page-iframe="url:https://www.google.com">
+                   <!-- "url:https://www.shopify.com/uk"-->
                 </a-plane>
             </a-cylinder>
         </a-entity>
