--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <!-- Panel 1: Links to portfolio -->
             <a-box position="-1 0 0" color="green">
                 <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="raycastable"
-                    open-page-iframe="url:https://github.com/Tezeroth?tab=repositories">
+                    open-page-iframe="">
                    <!-- "url:https://tezeroth.github.io/Bootstrap-Portfolio/"-->
                 </a-plane>
             </a-box>
@@ -93,7 +93,7 @@
             <!-- Panel 2: Links to ecommerce platform -->
             <a-cylinder position="1 0 0"  color="green">
                 <a-plane mixin="panel hover-anim" material="src:#Shop;" class="raycastable"
-                    open-page-iframe="url:https://github.com/Tezeroth?tab=repositories">
+                    open-page-iframe="">
                    <!-- "url:https://www.shopify.com/uk"-->
                 </a-plane>
             </a-cylinder>
