--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title> A-Frame Switch VR & Page</title>
 
     <!-- Include A-Frame and required external components -->
-    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.0/dist/aframe-environment-component.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@1.0.0/dist/aframe-look-at-component.min.js"></script>
@@ -65,19 +65,19 @@
         <a-plane position="0 0 -10" width="25" height="15" material="src: assets/images/tree.png"></a-plane>
            
             <!-- Explanatory Panel 1 -->
-            <a-plane position="-4 -2 0"  rotation="0 45 0" color="#1D1E2C" width="5" height="1.5">
+            <a-plane position="-4 -2 0" material="shader:flat;transparent:true;" opacity="0.5" rotation="0 45 0" color="#1D1E2C" width="5" height="1.5">
                 <a-text position="0 0 0.1" align="center"
                     value="This is a proof of concept \n that 3D websites can \n be integrated into the normal web.">
-                    <!--material="shader:flat;transparent:true;" opacity="0.5"-->
+                    <!---->
                 </a-text>
             </a-plane>
             
             <!-- Explanatory Panel 2 -->
-            <a-plane position="4 -2 0"   rotation="0 -45 0" color="#6A8D92" width="5" height="1.5">
+            <a-plane position="4 -2 0" opacity="0.5" material="shader:flat;transparent:true;"  rotation="0 -45 0" color="#6A8D92" width="5" height="1.5">
                 <a-text position="0 0 0.01" align="center"
                     value="Click on the image on the left \nto see my portfolio of web pages,\n or click 'shop now' to see a viable\n ecommerce  platform, using i-frames.">
                 </a-text>
-                <!-- opacity="0.5" material="shader:flat;transparent:true;" -->
+                <!--  -->
             </a-plane>
         </a-entity>
 
@@ -86,16 +86,16 @@
             <!-- Panel 1: Links to portfolio -->
             <a-box position="-1 0 0" color="green">
                 <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="raycastable"
-                    open-page-iframe="">
-                   <!-- "url:https://tezeroth.github.io/Bootstrap-Portfolio/"-->
+                    open-page-iframe="url:https://tezeroth.github.io/Bootstrap-Portfolio/">
+                   <!-- -->
                 </a-plane>
             </a-box>
 
             <!-- Panel 2: Links to ecommerce platform -->
             <a-cylinder position="1 0 0"  color="green">
                 <a-plane mixin="panel hover-anim" material="src:#Shop;" class="raycastable"
-                    open-page-iframe="">
-                   <!-- "url:https://www.shopify.com/uk"-->
+                    open-page-iframe="url:https://www.shopify.com/uk">
+                   <!-- ""-->
                 </a-plane>
             </a-cylinder>
         </a-entity>
