--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Include A-Frame and required external components -->
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <!--<script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
     <!--<script src="https://unpkg.com/aframe-environment-component@1.3.0/dist/aframe-environment-component.min.js"></script>-->
     <!--<script src="https://unpkg.com/aframe-look-at-component@1.0.0/dist/aframe-look-at-component.min.js"></script>-->
     <script src="aframe-open-page-iframe.js"></script>
