--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.5.1/dist/aframe-extras.min.js"></script>
     <!--<script src="https://unpkg.com/aframe-environment-component@1.3.0/dist/aframe-environment-component.min.js"></script>-->
-    <!--<script src="https://unpkg.com/aframe-look-at-component@1.0.0/dist/aframe-look-at-component.min.js"></script>-->
+    <script src="https://unpkg.com/aframe-look-at-component@1.0.0/dist/aframe-look-at-component.min.js"></script>
     <script src="aframe-open-page-iframe.js"></script>
 </head>
 
@@ -85,7 +85,7 @@
         <a-entity id="panels" position="0 0.5 -4">
             <!-- Panel 1: Links to portfolio -->
             <a-box position="-1 0 0" color="green">
-                <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="raycastable"
+                <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="clickable"></a-plane><!--or class = raycastable-->
                     open-page-iframe="url:https://tezeroth.github.io/Bootstrap-Portfolio/">
                    <!-- -->
                 </a-plane>
@@ -93,7 +93,7 @@
 
             <!-- Panel 2: Links to ecommerce platform -->
             <a-cylinder position="1 0 0"  color="green">
-                <a-plane mixin="panel hover-anim" material="src:#Shop;" class="raycastable"
+                <a-plane mixin="panel hover-anim" material="src:#Shop;" class="clickable"
                     open-page-iframe="url:https://www.shopify.com/uk">
                    <!-- ""-->
                 </a-plane>
