--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <a-entity id="panels" position="0 0.5 -4">
             <!-- Panel 1: Links to portfolio -->
             <a-box position="-1 0 0" color="green">
-                <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="clickable"></a-plane><!--or class = raycastable-->
+                <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="clickable"
                     open-page-iframe="url:https://tezeroth.github.io/Bootstrap-Portfolio/">
                    <!-- -->
                 </a-plane>
