--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!--<script src="https://unpkg.com/aframe-environment-component@1.3.0/dist/aframe-environment-component.min.js"></script>-->
     <script src="https://unpkg.com/aframe-look-at-component@1.0.0/dist/aframe-look-at-component.min.js"></script>
     <script src="aframe-open-page-iframe.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mayognaise/aframe-html-shader@master/dist/aframe-html-shader.min.js"></script>
+
 </head>
 
 <body>
@@ -86,10 +88,10 @@
             <!-- Panel 1: Links to portfolio -->
             <a-box position="-1 0 0" color="green">
                 <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="clickable"
-                    open-page-iframe="url:https://tezeroth.github.io/Bootstrap-Portfolio/">
+                    open-page-iframe="url:https://tezeroth.github.io/Bootstrap-Portfolio/; ">
                    <!-- -->
                 </a-plane>
-            </a-box>
+            </a-box>w
 
             <!-- Panel 2: Links to ecommerce platform -->
             <a-cylinder position="1 0 0"  color="green">
@@ -99,6 +101,7 @@
                 </a-plane>
             </a-cylinder>
         </a-entity>
+        
     </a-scene>
     
     <!-- Link to custom JavaScript file -->
