added raycastable AND clickable to interactive panels

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <a-entity id="panels" position="0 0.5 -4">
             <!-- Panel 1: Links to portfolio -->
             <a-box position="-1 0 0" color="green">
-                <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="clickable"
+                <a-plane mixin="panel hover-anim" material="src:#Tezz;" class="raycastable clickable"
                     open-page-iframe="url:https://tezeroth.github.io/Bootstrap-Portfolio/; ">
                    <!-- -->
                 </a-plane>
@@ -95,7 +95,7 @@
 
             <!-- Panel 2: Links to ecommerce platform -->
             <a-cylinder position="1 0 0"  color="green">
-                <a-plane mixin="panel hover-anim" material="src:#Shop;" class="clickable"
+                <a-plane mixin="panel hover-anim" material="src:#Shop;" class="raycastable clickable"
                     open-page-iframe="url:https://www.shopify.com/uk">
                    <!-- ""-->
                 </a-plane>
